crates/gardswag-syntax/src/snapshots/gardswag_syntax__lex__tests__lex_let.snap
---
source: crates/gardswag-syntax/src/lex.rs
assertion_line: 288
expression: "Lexer::new(\"let a = 1;\").collect::<Vec<_>>()"
---
[
    Ok(
        @0: Keyword(Let),
    ),
    Ok(
        @4: Identifier("a"),
    ),
    Ok(
        @6: EqSym,
    ),
    Ok(
        @8: Integer(1),
    ),
    Ok(
        @9: SemiColon,
    ),
]
