crates/gardswag-syntax/src/snapshots/gardswag_syntax__lex__tests__lex_loop.snap
---
source: crates/gardswag-syntax/src/lex.rs
assertion_line: 235
expression: "Lexer::new(\"loop {\\na = std.plus a b;\\n}\\n\").collect::<Vec<_>>()"
---
[
    Ok(
        Offsetted {
            offset: 0,
            inner: Keyword(
                Loop,
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 5,
            inner: LcBracket,
        },
    ),
    Ok(
        Offsetted {
            offset: 7,
            inner: Identifier(
                "a",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 9,
            inner: EqSym,
        },
    ),
    Ok(
        Offsetted {
            offset: 11,
            inner: Identifier(
                "std",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 14,
            inner: Dot,
        },
    ),
    Ok(
        Offsetted {
            offset: 15,
            inner: Identifier(
                "plus",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 20,
            inner: Identifier(
                "a",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 22,
            inner: Identifier(
                "b",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 23,
            inner: SemiColon,
        },
    ),
    Ok(
        Offsetted {
            offset: 25,
            inner: RcBracket,
        },
    ),
]
