crates/gardswag-syntax/src/snapshots/gardswag_syntax__lex__tests__lex_while.snap
---
source: crates/gardswag-syntax/src/lex.rs
assertion_line: 235
expression: "Lexer::new(\"while std.leq a b {\\na = std.plus a b;\\n}\\n\").collect::<Vec<_>>()"
---
[
    Ok(
        Offsetted {
            offset: 0,
            inner: Keyword(
                While,
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 6,
            inner: Identifier(
                "std",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 9,
            inner: Dot,
        },
    ),
    Ok(
        Offsetted {
            offset: 10,
            inner: Identifier(
                "leq",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 14,
            inner: Identifier(
                "a",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 16,
            inner: Identifier(
                "b",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 18,
            inner: LcBracket,
        },
    ),
    Ok(
        Offsetted {
            offset: 20,
            inner: Identifier(
                "a",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 22,
            inner: EqSym,
        },
    ),
    Ok(
        Offsetted {
            offset: 24,
            inner: Identifier(
                "std",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 27,
            inner: Dot,
        },
    ),
    Ok(
        Offsetted {
            offset: 28,
            inner: Identifier(
                "plus",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 33,
            inner: Identifier(
                "a",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 35,
            inner: Identifier(
                "b",
            ),
        },
    ),
    Ok(
        Offsetted {
            offset: 36,
            inner: SemiColon,
        },
    ),
    Ok(
        Offsetted {
            offset: 38,
            inner: RcBracket,
        },
    ),
]
